[tool.poetry]
name = "meshless.py"
version = "0.0.1"
description = ""
authors = ["Tiago Vilela <tiagovla@gmail.com>"]

packages = [
    {include = "meshless", from="."}
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^3.5.0"
sphinx-rtd-theme = "^0.5.1"
sphinx-autodoc-typehints = "^1.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
